# cuLBM

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
inc/: Engine.hpp  Lattice.hpp  Renderizable.hpp  Tensor3D.hpp
lib/: CLI11.hpp
lib/image/: EasyBMP.hpp
report/: Bibliography.bib  Makefile  README.md  Report.md  benchmarks.csv
src/: Engine.cpp  Engine.hpp  Lattice.cpp  Lattice.hpp  Matrix.hpp  Renderizable.hpp  Tensor3D.hpp  main.cpp  main.cu
src/common/: Array.hpp  Bitmap.cpp  Configuration.hpp  D2Q9.hpp  Defines.hpp  Engine.cpp  Engine.hpp  Exceptions.hpp  Lattice.hpp  Matrix.cuh  Matrix.hpp  Parameters.cpp  Parameters.hpp  Simulation.hpp  Solver.hpp  Utils.cpp  Utils.hpp  Vector2D.hpp
src/common/engines/: SdlEngine.cpp  SdlEngine.hpp  VtkEngine.cpp  VtkEngine.hpp
src/cpu/: CpuLattice.hpp  CpuSimulation.cpp  CpuSimulation.hpp  CpuSolver.cpp  CpuSolver.hpp  LBM.cpp  LBM.hpp  Matrix.hpp  Vector2D.hpp
src/gpu/: Defines.h  Device.cuh  GpuLBM.cu  GpuLBM.cuh  GpuLattice.cuh  GpuMatrix.cuh  GpuSimulation.cu  GpuSimulation.cuh  GpuSolver.cu  GpuSolver.cuh  GpuVector2D.cuh
src/res/: config.ini
